examples/conf/HTTPRoute_default_timeout-client.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: timeout-client
  namespace: default
spec:
  parentRefs:
    - name: example-gateway
      namespace: edge
  hostnames:
    - "timeout-client.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: timeout-debug
      timeouts:
        backendRequest: "100s"   # 设置长超时，避免后端先超时
      backendRefs:
        - name: test-http
          namespace: edge
          port: 30001
